--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
           <a href="#categories" class="btn primary">Browse Parts Catalog</a>
           <a href="#quick-order" class="btn ghost">Send a Quick Order List</a>
         </div>
-        <p class="hero-note">Ideal for workshops, fleets, and construction teams that can’t afford downtime.</p>
+        <p class="hero-note">
+          Ideal for workshops, fleets, and construction teams that can’t afford downtime.
+        </p>
       </div>
 
       <div class="hero-media">
@@ -116,12 +118,38 @@
             The Place N Replace funnel turns casual part lookups into
             confirmed, trackable orders — perfect for workshops and B2B buyers.
           </p>
+
           <ol class="steps">
-            <li><strong>Search & Scan</strong> — Techs search by tool, code, or scan a QR on the tool tag.</li>
-            <li><strong>Part Match</strong> — The catalog shows compatible bolts, nuts, bearings, and kits.</li>
-            <li><strong>Cart & Bundles</strong> — Suggested add-ons (washers, lock nuts, grease) auto-appear.</li>
-            <li><strong>Checkout</strong> — Buyer chooses delivery, account, or counter pickup.</li>
-            <li><strong>Order Routing</strong> — Warehouse receives a clear pick-list labeled by bin and shelf.</li>
+            <li>
+              <div class="step-content">
+                <span class="step-stage">Search &amp; Scan</span>
+                <p>Techs search by tool, code, or scan a QR on the tool tag.</p>
+              </div>
+            </li>
+            <li>
+              <div class="step-content">
+                <span class="step-stage">Part Match</span>
+                <p>The catalog shows compatible bolts, nuts, bearings, and kits.</p>
+              </div>
+            </li>
+            <li>
+              <div class="step-content">
+                <span class="step-stage">Cart &amp; Bundles</span>
+                <p>Suggested add-ons like washers, lock nuts, and grease auto-appear.</p>
+              </div>
+            </li>
+            <li>
+              <div class="step-content">
+                <span class="step-stage">Checkout</span>
+                <p>Buyer chooses delivery, account charging, or counter pickup.</p>
+              </div>
+            </li>
+            <li>
+              <div class="step-content">
+                <span class="step-stage">Order Routing</span>
+                <p>Warehouse receives a clear pick-list labeled by bin and shelf.</p>
+              </div>
+            </li>
           </ol>
         </div>
       </div>
@@ -143,13 +171,13 @@
           </article>
 
           <article class="card category-card">
-            <h3>Bolts, Nuts & Fasteners</h3>
+            <h3>Bolts, Nuts &amp; Fasteners</h3>
             <p>Metric, imperial, structural bolts, washers, anchors.</p>
             <button class="btn tiny">Browse Fasteners</button>
           </article>
 
           <article class="card category-card">
-            <h3>Bearings & Motion</h3>
+            <h3>Bearings &amp; Motion</h3>
             <p>Ball bearings, roller bearings, pillow blocks, bushings.</p>
             <button class="btn tiny">Browse Bearings</button>
           </article>
@@ -174,7 +202,7 @@
         <div class="card-grid four product-grid">
           <article class="card product-card">
             <h3>Impact-Grade Bolt Kit</h3>
-            <p class="product-meta">M10–M16 · 8.8 & 10.9 grade</p>
+            <p class="product-meta">M10–M16 · 8.8 &amp; 10.9 grade</p>
             <p class="product-price">From $59</p>
             <button class="btn tiny">Add to Cart</button>
           </article>
@@ -194,7 +222,7 @@
           </article>
 
           <article class="card product-card">
-            <h3>Assorted Nut & Washer Tray</h3>
+            <h3>Assorted Nut &amp; Washer Tray</h3>
             <p class="product-meta">400+ pieces · labeled compartments</p>
             <p class="product-price">From $39</p>
             <button class="btn tiny">Add to Cart</button>
